--- a/LeetCode/README
+++ b/LeetCode/README
@@ -1,1 +1,1 @@
-Leet Code Solutions
+![Model](https://github.com/rambabuwhy/cpp-problems/blob/master/code_ry/Blue%20and%20Orange%20Dog%20Autobiography%20Book%20Cover.png)
